fix nowrap for arranger elements

--- a/src/components/Arranger/styles.scss
+++ b/src/components/Arranger/styles.scss
@@ -88,6 +88,7 @@
         max-width: 175px;
         overflow: hidden;
         text-overflow: ellipsis;
+        white-space: nowrap;
     }
 
     .fileMeta {
